// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GuessRow snapshot > renders tiles and inputs for given length 1`] = `
<div>
  <div
    aria-label="Active guess row"
    class="flex flex-col gap-2 outline-none"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="flex gap-1"
    >
      <button
        aria-label="Letter c at position 1 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          c
        </span>
      </button>
      <button
        aria-label="Letter r at position 2 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          r
        </span>
      </button>
      <button
        aria-label="Letter a at position 3 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          a
        </span>
      </button>
      <button
        aria-label="Letter n at position 4 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          n
        </span>
      </button>
      <button
        aria-label="Letter e at position 5 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          e
        </span>
      </button>
    </div>
    <div
      class="flex items-center gap-2 text-xs"
    >
      <input
        aria-label="Guess letters"
        class="px-2 py-1 rounded border border-neutral-300 dark:border-neutral-700 bg-white/50 dark:bg-neutral-800/50 font-mono text-sm w-36"
        inputmode="text"
        maxlength="5"
        pattern="[a-z]*"
        type="text"
        value="crane"
      />
      <input
        aria-label="Pattern digits"
        class="px-2 py-1 rounded border border-neutral-300 dark:border-neutral-700 bg-white/50 dark:bg-neutral-800/50 font-mono text-sm w-28"
        inputmode="numeric"
        placeholder="00000"
        type="text"
        value="00000"
      />
      <button
        class="px-3 py-1 rounded bg-blue-600 disabled:opacity-40 text-white font-medium text-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </div>
</div>
`;

exports[`GuessRow snapshot > renders tiles and single input for given length (simplified) 1`] = `
<div>
  <div
    aria-label="Active guess row"
    class="flex flex-col gap-2 outline-none"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="flex gap-1"
    >
      <button
        aria-label="Letter c at position 1 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          c
        </span>
      </button>
      <button
        aria-label="Letter r at position 2 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          r
        </span>
      </button>
      <button
        aria-label="Letter a at position 3 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          a
        </span>
      </button>
      <button
        aria-label="Letter n at position 4 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          n
        </span>
      </button>
      <button
        aria-label="Letter e at position 5 is absent"
        class="tile relative text-lg font-semibold"
        data-state="absent"
        tabindex="0"
        type="button"
      >
        <span
          class="pointer-events-none select-none"
        >
          e
        </span>
      </button>
    </div>
    <div
      class="flex items-center gap-2 text-xs"
    >
      <input
        aria-label="Guess letters"
        class="px-2 py-1 rounded border border-neutral-300 dark:border-neutral-700 bg-white/50 dark:bg-neutral-800/50 font-mono text-sm w-36"
        inputmode="text"
        maxlength="5"
        pattern="[a-z]*"
        type="text"
        value="crane"
      />
      <button
        class="px-3 py-1 rounded bg-blue-600 disabled:opacity-40 text-white font-medium text-sm"
        type="button"
      >
        Add
      </button>
    </div>
  </div>
</div>
`;
